Open browser with generated report

--- a/report/report.html
+++ b/report/report.html
@@ -156,7 +156,9 @@
   "no-else-return": 1,
   "node_modules": 1,
   "objects": 1,
+  "open": 10,
   "operators": 1,
+  "outputPath": 10,
   "path": 10,
   "pre": 10,
   "predicate": 1,
