Added scan request to web-app

--- a/report/report.html
+++ b/report/report.html
@@ -8,7 +8,8 @@
         <div id="report">
           <pre>
             {
-  "": 10,
+  "": 11,
+  "\r": 1,
   "$": 10,
   "+": 9,
   "-": 1,
@@ -16,6 +17,7 @@
   "1": 5,
   "2": 10,
   "255": 10,
+  "CLI-режим": 10,
   "DOCTYPE": 10,
   "Escaped": 1,
   "JSON": 10,
@@ -91,7 +93,7 @@
   "argument": 10,
   "argv": 10,
   "arr": 1,
-  "async": 10,
+  "async": 11,
   "asyncFilter": 10,
   "await": 10,
   "body": 10,
@@ -99,8 +101,9 @@
   "catch": 10,
   "chars": 1,
   "charset": 10,
+  "cli": 11,
   "console": 10,
-  "const": 10,
+  "const": 11,
   "control": 1,
   "cur": 9,
   "currentStat": 9,
@@ -114,8 +117,10 @@
   "eslint-disable": 1,
   "excludedFolders": 10,
   "exit": 10,
+  "exports": 10,
   "extname": 10,
   "f": 10,
+  "false": 10,
   "file": 10,
   "filePath": 10,
   "filepaths": 10,
@@ -124,6 +129,7 @@
   "flat": 10,
   "flatten": 10,
   "flow": 1,
+  "formatted": 10,
   "fs": 10,
   "function": 1,
   "functions": 1,
@@ -149,6 +155,7 @@
   "margin": 10,
   "mergeStats": 10,
   "meta": 10,
+  "module": 10,
   "modules": 1,
   "ms": 1,
   "new": 1,
@@ -171,21 +178,23 @@
   "relative": 10,
   "replace": 1,
   "report": 10,
-  "require": 1,
+  "require": 2,
   "resolve": 10,
   "results": 1,
   "return": 10,
+  "scan": 1,
   "setTimeout": 1,
   "sleep": 1,
   "sort": 10,
   "source": 1,
   "spaces": 1,
   "split": 1,
+  "srcPath": 10,
   "stat": 10,
   "stats": 10,
   "stringify": 10,
   "style": 10,
-  "true": 10,
+  "true": 11,
   "try": 10,
   "undefined": 8,
   "utf-8": 1,
@@ -196,6 +205,7 @@
   "wordstats": 10,
   "writeFile": 10,
   "Асинхронная": 1,
+  "Запуск": 10,
   "Обход": 10,
   "Объединение": 5,
   "Папки-исключения": 1,
@@ -220,7 +230,8 @@
   "файле": 1,
   "файлов": 10,
   "файлу": 5,
-  "фильтрация": 1
+  "фильтрация": 1,
+  "через": 10
 }
           </pre>
         </div>
