Render checkboxes with ignored dirs

--- a/report/report.html
+++ b/report/report.html
@@ -8,8 +8,8 @@
         <div id="report">
           <pre>
             {
-  "": 11,
-  "\r": 1,
+  "": 12,
+  "\r": 2,
   "$": 10,
   "+": 9,
   "-": 1,
@@ -21,10 +21,12 @@
   "DOCTYPE": 10,
   "Escaped": 1,
   "JSON": 10,
+  "Koshka": 1,
   "No": 10,
   "Object": 10,
   "Promise": 10,
   "Replace": 1,
+  "Sobaka": 1,
   "Trim": 1,
   "UTF-8": 10,
   "Unescaped": 1,
@@ -103,7 +105,7 @@
   "charset": 10,
   "cli": 11,
   "console": 10,
-  "const": 11,
+  "const": 12,
   "control": 1,
   "cur": 9,
   "currentStat": 9,
@@ -194,9 +196,10 @@
   "stats": 10,
   "stringify": 10,
   "style": 10,
-  "true": 11,
+  "true": 12,
   "try": 10,
   "undefined": 8,
+  "userExcludedFolders": 10,
   "utf-8": 1,
   "values": 1,
   "walk": 10,
