--- a/report/report.html
+++ b/report/report.html
@@ -11,6 +11,7 @@
   "": 12,
   "\r": 2,
   "$": 10,
+  "&&": 10,
   "+": 9,
   "-": 1,
   "0": 10,
@@ -88,8 +89,11 @@
   "^var$": 1,
   "^while$": 1,
   "^with$": 1,
+  "__SELF__": 10,
   "__dirname": 10,
   "_v": 1,
+  "abs": 10,
+  "absPath": 10,
   "acc": 6,
   "all": 10,
   "argument": 10,
@@ -108,13 +112,19 @@
   "const": 12,
   "control": 1,
   "cur": 9,
+  "currentDir": 10,
+  "currentDirDirs": 10,
+  "currentDirEntries": 10,
   "currentStat": 9,
   "data": 10,
   "declarations": 1,
   "dir": 10,
   "div": 10,
   "e": 10,
+  "else": 10,
   "empty": 1,
+  "entry": 10,
+  "entryPath": 10,
   "error": 10,
   "eslint-disable": 1,
   "excludedFolders": 10,
@@ -131,6 +141,9 @@
   "flat": 10,
   "flatten": 10,
   "flow": 1,
+  "folder": 10,
+  "folderpaths": 10,
+  "folders": 10,
   "formatted": 10,
   "fs": 10,
   "function": 1,
@@ -146,12 +159,13 @@
   "includes": 10,
   "index": 1,
   "isDirectory": 10,
+  "isWalkableDir": 10,
   "item": 10,
   "join": 10,
   "js": 10,
   "keys": 10,
   "length": 1,
-  "let": 1,
+  "let": 10,
   "log": 10,
   "map": 10,
   "margin": 10,
@@ -177,20 +191,22 @@
   "readFile": 1,
   "readdir": 10,
   "reduce": 10,
-  "relative": 10,
   "replace": 1,
   "report": 10,
   "require": 2,
   "resolve": 10,
+  "result": 10,
   "results": 1,
   "return": 10,
   "scan": 1,
+  "self": 10,
   "setTimeout": 1,
   "sleep": 1,
   "sort": 10,
   "source": 1,
   "spaces": 1,
   "split": 1,
+  "src": 10,
   "srcPath": 10,
   "stat": 10,
   "stats": 10,
@@ -203,6 +219,7 @@
   "utf-8": 1,
   "values": 1,
   "walk": 10,
+  "walkFolder": 10,
   "words": 1,
   "wordstat": 10,
   "wordstats": 10,
